--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "echarts": "^5.5.0",
     "pinia": "^2.1.7",
     "quasar": "^2.8.0",
     "vue": "^3.2.29",
@@ -28,6 +29,8 @@
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "autoprefixer": "^10.4.17",
+    "electron": "^29.0.1",
+    "electron-packager": "^17.1.2",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
